# google-classroom

./: Cargo.toml
src/: lib.rs  model.rs
src/model/: course.rs  mod.rs
src/model/courses/: mod.rs
src/model/courses/course_work/: mod.rs
src/model/user_profiles/: mod.rs
