[package]
name = "google-classroom"
version = "0.0.1"
edition = "2021"

[features]
default = ["dep:reqwest", "reqwest?/rustls-tls-native-roots", "reqwest?/json"]
chrono = ["dep:chrono"]

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, optional = true }
chrono = { version = "0.4.23", features = ["serde"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]